# PersonalPortfolioAnalyst

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  PRODUCT.md  PROJECT_SPEC.md  README.md  pyproject.toml  requirements.txt
.claude/skills/verify/: SKILL.md
.github/workflows/: evals.yml
ad/: README.md  package-lock.json  package.json
ad/src/: Root.tsx  components.tsx  dashboard.tsx  demo.tsx  scenes.tsx  theme.ts
app/: billing.py  config.py  jobs.py  landing.py  main.py  plans.py  scheduler.py  streaming.py  webapp.py
app/agent/: budget.py  chat_context.py  digest_pipeline.py  events.py  loop.py  news_refresh.py  planner.py  prompts.py  synthesizer.py
app/agent/anomaly/: __init__.py  orchestrator.py  scanner.py  synthesis.py
app/agent/deep_dive/: __init__.py  pipeline.py  specialists.py
app/agent/macro/: orchestrator.py  specialists.py
app/auth/: context.py  jwt.py
app/crypto/: secrets.py
app/db/: models.py  repo.py
app/db/migrations/: 001_init.sql  002_multi_tenant.sql  003_alerts.sql  004_auth.sql  005_snaptrade.sql  006_plans.sql  007_notifications.sql  008_retire_imessage.sql  009_news_and_watchlist.sql  010_fix_snaptrade_rls.sql  011_rls_remaining_tables.sql  012_owner_service_context.sql  013_job_heartbeats.sql  014_ticker_fundamentals.sql  015_billing.sql  016_news_published_ordering.sql  017_trial.sql  018_deep_dive.sql  019_semantic_memory.sql  020_daily_prices.sql
app/delivery/: channels.py  discord_connect.py  dispatcher.py  imessage.py  shortcuts.py  twilio_inbound.py  unsubscribe.py  verification.py
app/delivery/adapters/: __init__.py  base.py  discord.py  email_resend.py  twilio_sms.py
app/detectors/: __init__.py  base.py  cusum.py  divergence.py  zscore.py
app/integrations/snaptrade/: __init__.py  client.py  mapper.py  onboarding.py  personal_client.py  sync.py
app/memory/: __init__.py  embeddings.py  ingest.py
app/observability/: logging.py
app/quant/: __init__.py  covariance.py  frontier.py  performance.py  returns.py  riskdecomp.py  simulate.py  tailrisk.py
app/tools/: anomalies.py  classify.py  digest.py  fundamentals.py  market.py  news.py  portfolio.py  portfolio_risk.py  price_store.py  recall.py  registry.py  risk.py  tickers.py
docs/: AI_ARCHITECTURE.md  DEPLOY.md  MULTI_TENANT_ROADMAP.md  PRICING_AND_ONBOARDING.md
evals/: __init__.py  classifier_eval.py  fake_tools.py  judge.py  report.py  run.py  schema.py
evals/baselines/: chat.json
evals/golden/: chat_cases.yaml  classifier_headlines.jsonl
macworker/: com.portfolioagent.macworker.plist  send.applescript  worker.py
scripts/: backfill_memory.py  calibrate_detectors.py  calibrate_risk.py  connect_brokerage.py  connect_wealthsimple.py  migrate.py  replay_run.py  seed_portfolio.py  sync_brokerage.py  sync_wealthsimple.py
tests/: fakes.py  test_account.py  test_adapters.py  test_anomaly_orchestrator.py  test_anomaly_scanner.py  test_anomaly_synthesis.py  test_auth.py  test_billing.py  test_budget.py  test_calibrate_risk.py  test_chat_context.py  test_chat_quota_api.py  test_chat_stream_api.py  test_chat_tools.py  test_classify.py  test_deep_dive_api.py  test_deep_dive_pipeline.py  test_detector_cusum.py  test_detector_divergence.py  test_detector_zscore.py  test_digest.py  test_digest_fanout.py  test_discord_connect.py  test_dispatch.py  test_dispatcher.py  test_evals_harness.py  test_fundamentals.py  test_head_meta.py  test_health.py  test_jobs.py  test_landing.py  test_limits.py  test_loop_integration.py  test_macro.py  test_macro_http.py  test_market.py  test_me.py  test_memory.py  test_news.py  test_news_feed.py  (+30 more)
