[project]
name = "portfolio-agent"
version = "0.1.0"
description = "Cirvia — AI portfolio analyst for Canadian investors."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anthropic>=0.40",
    "yfinance>=0.2.40",
    "finnhub-python>=2.4",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "snaptrade-python-sdk>=11.0",
    "pyjwt[crypto]>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
