[project]
name = "portfolio-agent"
version = "0.1.0"
description = "Cirvia — AI portfolio analyst for Canadian investors."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anthropic>=0.40",
    "yfinance>=0.2.40",
    "finnhub-python>=2.4",
    "apscheduler>=3.10",
    "httpx>=0.27",
    # Pinned below 12: SnapTrade SDK 12.0.0 changed its request auth and
    # breaks every call with 401/403 code 0000 "Authentication credentials
    # were not provided". Prod has no lockfile, so `pip install .` pulls the
    # newest match on every rebuild — an unbounded `>=11.0` silently upgraded
    # to 12.0.0 on a deploy and took brokerage connect down. 11.0.x verified.
    "snaptrade-python-sdk>=11.0,<12",
    "pyjwt[crypto]>=2.9",
    "stripe>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
