[project]
name = "portfolio-agent"
version = "0.1.0"
description = "Cirvia — AI portfolio analyst for Canadian investors."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anthropic>=0.40",
    "yfinance>=0.2.40",
    "finnhub-python>=2.4",
    # Quant engine (app/quant/): matrix risk analytics. numpy is already
    # vendored + hash-pinned transitively via yfinance — declaring it directly
    # just stops a future yfinance change from silently dropping it. scipy is a
    # genuinely new dependency, used ONLY for the long-only efficient-frontier
    # QP (app/quant/frontier.py); Tiers 1-3 are numpy-only.
    "numpy>=2,<3",
    "scipy>=1.13,<2",
    "apscheduler>=3.10",
    "httpx>=0.27",
    # Pinned below 12: SnapTrade SDK 12.0.0 changed its request auth and
    # breaks every call with 401/403 code 0000 "Authentication credentials
    # were not provided". Prod has no lockfile, so `pip install .` pulls the
    # newest match on every rebuild — an unbounded `>=11.0` silently upgraded
    # to 12.0.0 on a deploy and took brokerage connect down. 11.0.x verified.
    "snaptrade-python-sdk>=11.0,<12",
    "pyjwt[crypto]>=2.9",
    "stripe>=12",
    # Semantic memory (app/memory/): SQLAlchemy Vector type + cosine_distance
    # operator for the pgvector column; binds/parses as text through asyncpg.
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    # Eval harness (evals/): golden chat cases are YAML.
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
